ros/servo controller/ros2_ws/log/build_2024-06-03_14-20-10/webcam_streamer_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/webcam_streamer_package/lib/python3.10/site-packages/webcam_streamer_package/webcam_streamer_node.py", line 6
    import rclpy.qos import qos_profile_sensor_data
                     ^^^^^^
SyntaxError: invalid syntax

